# ZPG-project

./: .gitmodules  CMakeLists.txt  main.cpp
assets/: constant.frag  constant.vert  cuboid_test.frag  cuboid_test.vert  light_test.frag  light_test.vert  shader.frag  shader.vert
assets/data/: moons.csv
assets/models/: skydome.mtl
assets/shader/: constant_color.frag  constant_color.vert  constant_texture.vert  skydome.frag  skydome.vert  standard.frag  standard.vert
include/rapidcsv/: rapidcsv.h
src/: Application.cpp  Application.h  Demo.cpp  Demo.h
src/demo/: Demo.cpp  Demo.h  DemoAssimp.cpp  DemoAssimp.h  DemoPhongCubes.cpp  DemoPhongCubes.h  DemoScene1.cpp  DemoScene1.h  DemoScene2.cpp  DemoScene2.h  DemoScene3.cpp  DemoScene3.h  DemoSceneSolarSystem.cpp  DemoSceneSolarSystem.h  DemoSkydome.cpp  DemoSkydome.h  DemoTerrain.cpp  DemoTerrain.h
src/io/: Cursor.cpp  Cursor.h  Keyboard.cpp  Keyboard.h
src/memory/: Buffer.cpp  Buffer.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h
src/model/: ArrayModel.cpp  ArrayModel.h  AssimpLoader.cpp  AssimpLoader.h  BaseModel.cpp  BaseModel.h  DefaultModels.h  ElementModel.cpp  ElementModel.h  ModelImporter.h  ModelRegistry.cpp  ModelRegistry.h
src/model/attribute/: ModelAttribute.cpp  ModelAttribute.h
src/model/shader/: DefaultShaders.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  (+4 more)
src/scene/: Camera.cpp  Camera.h  DirectionalLightSource.cpp  DirectionalLightSource.h  DrawableObject.cpp  DrawableObject.h  LightSource.cpp  LightSource.h  ObjectRenderer.cpp  ObjectRenderer.h  Scene.cpp  Scene.h  SpotlightSource.cpp  SpotlightSource.h
src/shape/: Cuboid.cpp  Cuboid.h  Shape.h  Sphere.h
src/util/: Noncopyable.h  Observable.h  ObservableValue.h  Observer.h  Usable.h  callbacks.h  concepts.h  constructor.h  debug.h  exceptions.cpp  exceptions.h  glTypes.h  glfw_destructors.cpp  glfw_destructors.h  glfw_util.h  math_utils.cpp  math_utils.h  util.cpp  util.h
src/window/: Window.cpp  Window.h
(+53 files in other folders)
